tests/lean/t8.lean
#setline 1000

prit "ok"

#setline 33
fo
print "ok"
check
print "done"